--- a/ex3.html
+++ b/ex3.html
@@ -5,16 +5,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("button").click(function () {
-                $("#div1").fadeIn();
-                $("#div2").fadeIn("slow");
-                $("#div3").fadeIn(3000);
-            });
-        });
-    </script>
-</head>
+    <script src="ex3.js"></script>
+    <link rel="stylesheet" href="ex3.css">
 
 <body>
 
@@ -22,9 +14,9 @@
 
     <button>Click to fade in boxes</button><br><br>
 
-    <div id="div1" style="width:80px;height:80px;display:none;background-color:red;"></div><br>
-    <div id="div2" style="width:80px;height:80px;display:none;background-color:green;"></div><br>
-    <div id="div3" style="width:80px;height:80px;display:none;background-color:blue;"></div>
+    <div id="div1"></div><br>
+    <div id="div2"></div><br>
+    <div id="div3"></div>
 
 </body>
 
